--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
@@ -40,7 +42,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
