--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "expo-image-picker": "~15.0.7",
-    "expo-notifications": "~0.28.19"
+    "expo-notifications": "~0.28.19",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
